chore: setup custom webapp UI development environment
- Add .gitignore for local dev files (.env.local, docker-compose.dev.yaml)
- Add docker/dev/ with Dockerfile and entrypoint for FE hot reload
- Add development guide for custom UI changes
- Branch: custom-webapp-ui for tracking UI customizations separately from Dify upstream

--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,21 @@ scripts/stress-test/reports/
 
 # settings
 *.local.json
+
+# Local development files
+docker/.env.dev
+docker/.env.dev.example
+docker/docker-compose.dev.yaml
+docker/dev/PLAN-*.md
+docker/dev/SETUP-*.md
+docker/dev/HOW-TO-*.md
+web/.env.local
+
+# Local development files
+docker/.env.dev
+docker/.env.dev.example
+docker/docker-compose.dev.yaml
+docker/dev/PLAN-*.md
+docker/dev/SETUP-*.md
+docker/dev/HOW-TO-*.md
+web/.env.local
